--- a/app/src/main/res/layout/content_set_profile.xml
+++ b/app/src/main/res/layout/content_set_profile.xml
@@ -14,12 +14,12 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="234dp"
         android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
         android:text="@string/vegetarian"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title1"
-        android:onClick="selectDiet" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <CheckBox
         android:id="@+id/vegan"
@@ -51,13 +51,16 @@
         android:id="@+id/diaryFree"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="73dp"
         android:layout_marginStart="68dp"
+        android:layout_marginTop="16dp"
         android:text="@string/diaryfree"
+        app:layout_constraintBottom_toTopOf="@+id/eggsFree"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/vegetarian"
-        app:layout_constraintTop_toBottomOf="@+id/title1" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <CheckBox
         android:id="@+id/eggsFree"
@@ -334,7 +337,6 @@
         android:layout_marginEnd="16dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:onClick="finalSelection"
         android:text="@string/done"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
