--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -33,7 +33,7 @@
 
     <Button
         android:id="@+id/btnFacebook"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
@@ -59,13 +59,12 @@
     <Button
 
         android:id="@+id/btnGoogle"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
+        android:layout_alignStart="@+id/btnFacebook"
         android:layout_gravity="center_vertical"
-        android:layout_marginBottom="28dp"
-        android:layout_marginEnd="92dp"
+        android:layout_marginBottom="27dp"
         android:background="@drawable/rounded_corner_gg_btn"
         android:fontFamily="casual"
         android:padding="10dp"
