--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,9 +3,10 @@
     <color name="colorPrimary">#7bb737</color>
     <color name="colorPrimaryDark">#578227</color>
     <color name="colorGoogle">#D84B37</color>
-    <color name="colorFacebook">#3B5998</color>
-    <color name="colorAccent">#f2d20e66</color>
+    <color name="colorAccent">#B0B0B0</color>
     <color name="dairy">#84779b</color>
     <color name="gluten">#d1bc27</color>
     <color name="peanuts">#ba8371</color>
+    <color name="takePicture">#3B5998</color>
+    <color name="check">#59757f</color>
 </resources>
