--- a/app/src/main/res/layout/content_home_page.xml
+++ b/app/src/main/res/layout/content_home_page.xml
@@ -8,33 +8,65 @@
     tools:context=".HomePage"
     tools:showIn="@layout/activity_home_page">
 
-    <TextView
-        android:id="@+id/welcome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="172dp"
-        android:text="Welcome!"
-        tools:textSize="36sp" />
-
-    <Button
-        android:id="@+id/addPic"
-        android:layout_width="134dp"
-        android:layout_height="75dp"
+    <RelativeLayout
+        android:layout_width="270dp"
+        android:layout_height="103dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="222dp"
-        android:text="Add Pic" />
+        android:layout_marginBottom="237dp">
 
-    <Button
-        android:id="@+id/EnterIngredients"
-        android:layout_width="149dp"
-        android:layout_height="71dp"
+        <Button
+            android:id="@+id/addPic"
+            android:layout_width="103dp"
+            android:layout_height="107dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="0dp"
+            android:background="@drawable/camera" />
+
+        <TextView
+            android:id="@+id/take_picture_textView"
+            android:layout_width="170dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:fontFamily="casual"
+            android:text="@string/take_picture"
+            android:textColor="@color/takePic"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="266dp"
+        android:layout_height="88dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="113dp"
-        android:text="Enter Ingredients" />
+        android:layout_marginBottom="119dp">
+
+        <Button
+            android:id="@+id/EnterIngredients"
+            android:layout_width="87dp"
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:background="@drawable/manually" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="175dp"
+            android:layout_height="57dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:fontFamily="casual"
+            android:text="@string/typing"
+            android:textColor="@color/manually"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+    </RelativeLayout>
+
 
     <ImageButton
         android:id="@+id/ButtonSetProfile"
@@ -42,8 +74,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
-        android:layout_marginEnd="13dp"
-        android:layout_marginTop="67dp"
+        android:layout_marginEnd="21dp"
+        android:layout_marginTop="15dp"
         app:srcCompat="@android:drawable/ic_menu_myplaces" />
 
 </RelativeLayout>
