--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="peanuts">#ba8371</color>
     <color name="takePicture">#3B5998</color>
     <color name="check">#59757f</color>
+    <color name="takePic">#417c91</color>
+    <color name="manually">#cc6600</color>
 </resources>
