final Ocr + homepage adds

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="check">#59757f</color>
     <color name="takePic">#417c91</color>
     <color name="manually">#cc6600</color>
+    <color name="profile">#a52751</color>
 </resources>
