--- a/app/src/main/res/layout/activity_ocr_view.xml
+++ b/app/src/main/res/layout/activity_ocr_view.xml
@@ -7,8 +7,8 @@
     tools:context="com.example.mikhal.wiseatapp.OcrView">
 
     <RelativeLayout
-        android:layout_width="153dp"
-        android:layout_height="46dp"
+        android:layout_width="152dp"
+        android:layout_height="41dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="23dp">
@@ -35,7 +35,7 @@
             android:layout_height="match_parent"
             android:layout_alignParentEnd="true"
             android:layout_alignParentTop="true"
-            android:layout_marginEnd="19dp"
+            android:layout_marginEnd="16dp"
             android:elevation="3dp"
             app:srcCompat="@drawable/focus" />
 
@@ -56,16 +56,16 @@
     <RelativeLayout
         android:layout_width="153dp"
         android:layout_height="41dp"
-        android:layout_above="@+id/resText"
-        android:layout_centerHorizontal="true">
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="90dp">
 
         <Button
             android:id="@+id/checkBtn"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="0dp"
             android:background="@drawable/rounded_corner_check"
             android:fontFamily="casual"
             android:padding="10dp"
@@ -84,6 +84,7 @@
         android:layout_marginBottom="21dp"
         android:fontFamily="casual"
         android:textAllCaps="false"
+        android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
