--- a/app/src/main/res/layout/content_home_page.xml
+++ b/app/src/main/res/layout/content_home_page.xml
@@ -54,7 +54,7 @@
             android:background="@drawable/manually" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/manually_textView"
             android:layout_width="175dp"
             android:layout_height="57dp"
             android:layout_alignParentEnd="true"
@@ -67,15 +67,37 @@
 
     </RelativeLayout>
 
-
-    <ImageButton
-        android:id="@+id/ButtonSetProfile"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <RelativeLayout
+        android:layout_width="117dp"
+        android:layout_height="81dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
-        android:layout_marginEnd="21dp"
-        android:layout_marginTop="15dp"
-        app:srcCompat="@android:drawable/ic_menu_myplaces" />
+        android:layout_marginTop="19dp">
+
+        <ImageButton
+            android:id="@+id/ButtonSetProfile"
+            android:layout_width="59dp"
+            android:layout_height="57dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:adjustViewBounds="false"
+            android:background="@drawable/profile"
+            android:cropToPadding="false" />
+
+        <TextView
+            android:id="@+id/Logout_textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:fontFamily="casual"
+            android:gravity="center"
+            android:text="@string/profile"
+            android:textColor="@color/profile"
+            android:textSize="15sp"
+            android:textStyle="bold" />
+
+    </RelativeLayout>
+
 
 </RelativeLayout>
