--- a/app/src/main/res/layout/content_home_page.xml
+++ b/app/src/main/res/layout/content_home_page.xml
@@ -9,65 +9,6 @@
     tools:showIn="@layout/activity_home_page">
 
     <RelativeLayout
-        android:layout_width="270dp"
-        android:layout_height="103dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="237dp">
-
-        <Button
-            android:id="@+id/addPic"
-            android:layout_width="103dp"
-            android:layout_height="107dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="0dp"
-            android:background="@drawable/camera" />
-
-        <TextView
-            android:id="@+id/take_picture_textView"
-            android:layout_width="170dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:fontFamily="casual"
-            android:text="@string/take_picture"
-            android:textColor="@color/takePic"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="266dp"
-        android:layout_height="88dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="119dp">
-
-        <Button
-            android:id="@+id/EnterIngredients"
-            android:layout_width="87dp"
-            android:layout_height="match_parent"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:background="@drawable/manually" />
-
-        <TextView
-            android:id="@+id/manually_textView"
-            android:layout_width="175dp"
-            android:layout_height="57dp"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:fontFamily="casual"
-            android:text="@string/typing"
-            android:textColor="@color/manually"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-
-    </RelativeLayout>
-
-    <RelativeLayout
         android:layout_width="117dp"
         android:layout_height="81dp"
         android:layout_alignParentEnd="true"
@@ -98,6 +39,68 @@
             android:textStyle="bold" />
 
     </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="270dp"
+        android:layout_height="110dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="229dp">
+
+        <Button
+            android:id="@+id/addPic"
+            android:layout_width="113dp"
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="0dp"
+            android:background="@drawable/camera" />
+
+        <TextView
+            android:id="@+id/take_picture_textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toEndOf="@+id/addPic"
+            android:fontFamily="casual"
+            android:text="@string/take_picture"
+            android:textColor="@color/takePic"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="266dp"
+        android:layout_height="96dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="97dp">
+
+        <Button
+            android:id="@+id/EnterIngredients"
+            android:layout_width="94dp"
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="6dp"
+            android:background="@drawable/manually" />
+
+        <TextView
+            android:id="@+id/manually_textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="30dp"
+            android:fontFamily="casual"
+            android:text="@string/typing"
+            android:textColor="@color/manually"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+    </RelativeLayout>
+
 
 
 </RelativeLayout>
