--- a/app/src/main/res/layout/content_home_page.xml
+++ b/app/src/main/res/layout/content_home_page.xml
@@ -8,6 +8,18 @@
     tools:context=".HomePage"
     tools:showIn="@layout/activity_home_page">
 
+    <TextView
+        android:id="@+id/guidelines_textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="121dp"
+        android:fontFamily="casual"
+        android:gravity="center"
+        android:text="@string/home_guidelines"
+        android:textSize="18sp"
+        android:textStyle="bold" />
     <RelativeLayout
         android:layout_width="117dp"
         android:layout_height="81dp"
@@ -22,7 +34,7 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:adjustViewBounds="false"
-            android:background="@drawable/profile"
+            android:background="@drawable/profile_pressedx"
             android:cropToPadding="false" />
 
         <TextView
@@ -43,9 +55,7 @@
     <RelativeLayout
         android:layout_width="270dp"
         android:layout_height="110dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="229dp">
+        android:layout_centerInParent="true">
 
         <Button
             android:id="@+id/addPic"
@@ -54,7 +64,8 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_marginStart="0dp"
-            android:background="@drawable/camera" />
+            android:background="@drawable/camera_pressedx"
+            android:visibility="visible" />
 
         <TextView
             android:id="@+id/take_picture_textView"
@@ -75,7 +86,7 @@
         android:layout_height="96dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="97dp">
+        android:layout_marginBottom="95dp">
 
         <Button
             android:id="@+id/EnterIngredients"
@@ -84,7 +95,7 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_marginStart="6dp"
-            android:background="@drawable/manually" />
+            android:background="@drawable/manually_preesedx" />
 
         <TextView
             android:id="@+id/manually_textView"
