--- a/app/src/main/res/layout/content_search_ingredients.xml
+++ b/app/src/main/res/layout/content_search_ingredients.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".SearchIngredients"
-    tools:showIn="@layout/activity_search_ingredients">
+    tools:showIn="@layout/activity_search_ingredients" >
 
     <TextView
         android:id="@+id/searchTitle"
@@ -16,10 +16,15 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="36dp"
         android:layout_marginTop="86dp"
-        android:text="Search ingredients"
-        android:textSize="30sp"
         tools:layout_editor_absoluteX="35dp"
-        tools:layout_editor_absoluteY="79dp" />
+        tools:layout_editor_absoluteY="79dp"
+        android:fontFamily="casual"
+        android:gravity="center"
+        android:text="Please search your ingredients"
+        android:textAlignment="center"
+        android:textAllCaps="false"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
     <SearchView
         android:id="@+id/search"
@@ -28,25 +33,47 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/searchTitle"
         android:layout_marginStart="36dp"
-        android:layout_marginTop="86dp"/>
+        android:layout_marginTop="86dp"
+
+        android:visibility="visible" />
 
     <TextView
         android:id="@+id/searchComment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/search"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="86dp"
-        android:text='enter specific ingredients or a few seperteting with ","' />
+        android:layout_alignEnd="@+id/relativeLayout1"
+        android:layout_centerVertical="true"
+        android:fontFamily="casual"
+        android:gravity="center"
+        android:text='Use , to seperate a list of ingredients '
+        android:textAlignment="center" />
 
-    <Button
-        android:id="@+id/btnSearch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/searchComment"
-        android:layout_marginStart="150dp"
-        android:layout_marginTop="86dp"
-        android:text="Search" />
+
+
+    <RelativeLayout
+        android:layout_width="153dp"
+        android:layout_height="41dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="90dp"
+        android:id="@+id/relativeLayout1"
+        >
+
+
+        <Button
+            android:id="@+id/btnSearch"
+            android:layout_width="153dp"
+            android:layout_height="41dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:background="@drawable/rounded_corner_check"
+            android:fontFamily="casual"
+            android:padding="10dp"
+            android:text="@string/Check"
+            android:textAllCaps="false"
+            android:textColor="@android:color/background_light" />
+
+    </RelativeLayout>
+
+
 </RelativeLayout>
