--- a/app/src/main/res/drawable/focus_pressedx.xml
+++ b/app/src/main/res/drawable/focus_pressedx.xml
@@ -1,6 +1,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:drawable="@drawable/manually_pressed"
+        android:drawable="@drawable/focus_pressed"
         android:state_pressed="true"/>
-    <item android:drawable="@drawable/manually"/>
+    <item android:drawable="@drawable/focus"/>
 </selector>
