improve result view + change radio buttons color

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#7bb737</color>
     <color name="colorPrimaryDark">#578227</color>
     <color name="colorGoogle">#D84B37</color>
-    <color name="colorAccent">#B0B0B0</color>
+    <color name="colorAccent">#504f4f</color>
     <color name="dairy">#84779b</color>
     <color name="gluten">#d1bc27</color>
     <color name="peanuts">#ba8371</color>
