--- a/app/src/main/res/layout/activity_result_view.xml
+++ b/app/src/main/res/layout/activity_result_view.xml
@@ -1,66 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.mikhal.wiseatapp.ResultView">
+    <ImageButton
+        android:id="@+id/homeButton"
+        android:layout_width="45dp"
+        android:layout_height="77dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="39dp"
+        android:background="@drawable/homeicon" />
 
     <TextView
         android:id="@+id/resTextView"
-        android:layout_width="310dp"
-        android:layout_height="312dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="96dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="121dp"
         android:fontFamily="casual"
         android:gravity="center"
-        android:textSize="18dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textSize="18dp" />
 
     <ImageView
         android:id="@+id/resImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.509"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/resTextView"
-        app:layout_constraintVertical_bias="0.106"
-        app:srcCompat="@color/cast_expanded_controller_ad_container_white_stripe_color" />
+        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/resTextView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="146dp" />
 
     <TextView
         android:id="@+id/emailAddress"
         android:layout_width="226dp"
         android:layout_height="44dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="36dp"
         android:autoLink="email"
         android:fontFamily="casual"
         android:gravity="center"
         android:text="wizeatapp@gmail.com"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/resImageView"
-        app:layout_constraintVertical_bias="0.023" />
+        android:textSize="20sp" />
 
-    <ImageButton
-        android:id="@+id/homeButton"
-        android:layout_width="45dp"
-        android:layout_height="77dp"
-        android:background="@drawable/homeicon"
-        tools:layout_editor_absoluteX="302dp"
-        tools:layout_editor_absoluteY="0dp" />
-
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
