--- a/app/src/main/res/layout/activity_result_view.xml
+++ b/app/src/main/res/layout/activity_result_view.xml
@@ -12,39 +12,38 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
         android:layout_marginEnd="39dp"
-        android:background="@drawable/homeicon" />
+        android:background="@drawable/homeicon_preesedx" />
 
     <TextView
         android:id="@+id/resTextView"
-        android:layout_width="match_parent"
+        android:layout_width="329dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="121dp"
+        android:layout_below="@+id/homeButton"
+        android:layout_centerHorizontal="true"
+        android:fontFamily="casual"
+        android:textSize="18dp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/emailAddress"
+        android:layout_width="wrap_content"
+        android:layout_height="34dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="182dp"
+        android:autoLink="email"
         android:fontFamily="casual"
         android:gravity="center"
-        android:textSize="18dp" />
+        android:text="wizeatapp@gmail.com"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
     <ImageView
         android:id="@+id/resImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_below="@+id/resTextView"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="146dp" />
-
-    <TextView
-        android:id="@+id/emailAddress"
-        android:layout_width="226dp"
-        android:layout_height="44dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="36dp"
-        android:autoLink="email"
-        android:fontFamily="casual"
-        android:gravity="center"
-        android:text="wizeatapp@gmail.com"
-        android:textSize="20sp" />
+        android:layout_marginBottom="54dp" />
 
 </RelativeLayout>
