--- a/app/src/main/res/layout/content_search_ingredients.xml
+++ b/app/src/main/res/layout/content_search_ingredients.xml
@@ -2,29 +2,27 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".SearchIngredients"
-    tools:showIn="@layout/activity_search_ingredients" >
+    tools:showIn="@layout/activity_search_ingredients">
 
     <TextView
         android:id="@+id/searchTitle"
-        android:layout_width="wrap_content"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="38dp"
-        android:layout_marginTop="110dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="96dp"
         android:fontFamily="casual"
         android:gravity="center"
-        android:text="Please search your ingredients"
+        android:text="@string/pls_search"
         android:textAlignment="center"
         android:textAllCaps="false"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        tools:layout_editor_absoluteX="35dp"
-        tools:layout_editor_absoluteY="79dp" />
+        android:textSize="19sp"
+        android:textStyle="bold" />
 
     <SearchView
         android:id="@+id/search"
@@ -34,44 +32,36 @@
         android:layout_below="@+id/searchTitle"
         android:layout_marginStart="36dp"
         android:layout_marginTop="86dp"
-
         android:visibility="visible" />
 
     <TextView
         android:id="@+id/searchComment"
-        android:layout_width="wrap_content"
+        android:layout_width="335dp"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/relativeLayout1"
-        android:layout_centerVertical="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="141dp"
         android:fontFamily="casual"
         android:gravity="center"
-        android:text='Use , to seperate a list of ingredients '
+        android:text='@string/instructions'
         android:textAlignment="center" />
 
 
-    <RelativeLayout
-        android:id="@+id/relativeLayout1"
-        android:layout_width="153dp"
-        android:layout_height="41dp"
+    <Button
+        android:id="@+id/btnSearch"
+        android:layout_width="218dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="43dp">
-
-
-        <Button
-            android:id="@+id/btnSearch"
-            android:layout_width="153dp"
-            android:layout_height="41dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:background="@drawable/rounded_corner_check"
-            android:fontFamily="casual"
-            android:padding="10dp"
-            android:text="@string/check_prod"
-            android:textAllCaps="false"
-            android:textColor="@android:color/background_light" />
-
-    </RelativeLayout>
-
+        android:layout_marginBottom="85dp"
+        android:background="@android:color/transparent"
+        android:drawableLeft="@drawable/check_btn"
+        android:fontFamily="casual"
+        android:paddingBottom="75dp"
+        android:text="@string/check_prod"
+        android:textAllCaps="false"
+        android:textColor="@color/check"
+        android:textSize="15dp"
+        android:textStyle="bold" />
 
 </RelativeLayout>
